--- a/SpaceInvaders/Makefile
+++ b/SpaceInvaders/Makefile
@@ -31,7 +31,59 @@ clean: ## Clean all intermediate files.
 	@mkdir .build
 
 projgen:
+	$(GENIE) --with-shared-lib vs2012
+	$(GENIE) --with-shared-lib vs2013
+	$(GENIE) --with-shared-lib vs2015
+	$(GENIE) --with-shared-lib vs2017
 	$(GENIE) --with-shared-lib --gcc=osx gmake
+
+.build/projects/vs2012:
+	$(GENIE) --with-shared-lib vs2012
+vs2012-debug32: .build/projects/vs2012 ## Build - VS2012 x86 Debug
+	devenv .build/projects/vs2012/spaceinvaders.sln /Build "Debug|Win32"
+vs2012-release32: .build/projects/vs2012 ## Build - VS2012 x86 Release
+	devenv .build/projects/vs2012/spaceinvaders.sln /Build "Release|Win32"
+vs2012-debug64: .build/projects/vs2012 ## Build - VS2012 x64 Debug
+	devenv .build/projects/vs2012/spaceinvaders.sln /Build "Debug|x64"
+vs2012-release64: .build/projects/vs2012 ## Build - VS2012 x64 Release
+	devenv .build/projects/vs2012/spaceinvaders.sln /Build "Release|x64"
+vs2012: vs2012-debug32 vs2012-release32 vs2012-debug64 vs2012-release64 ## Build - VS2012 x86/x64 Debug and Release
+
+.build/projects/vs2013:
+	$(GENIE) --with-shared-lib vs2013
+vs2013-debug32: .build/projects/vs2013 ## Build - VS2013 x86 Debug
+	devenv .build/projects/vs2013/spaceinvaders.sln /Build "Debug|Win32"
+vs2013-release32: .build/projects/vs2013 ## Build - VS2013 x86 Release
+	devenv .build/projects/vs2013/spaceinvaders.sln /Build "Release|Win32"
+vs2013-debug64: .build/projects/vs2013 ## Build - VS2013 x64 Debug
+	devenv .build/projects/vs2013/spaceinvaders.sln /Build "Debug|x64"
+vs2013-release64: .build/projects/vs2013 ## Build - VS2013 x64 Release
+	devenv .build/projects/vs2013/spaceinvaders.sln /Build "Release|x64"
+vs2013: vs2013-debug32 vs2013-release32 vs2013-debug64 vs2013-release64 ## Build - VS2013 x86/x64 Debug and Release
+
+.build/projects/vs2015:
+	$(GENIE) --with-shared-lib vs2015
+vs2015-debug32: .build/projects/vs2015 ## Build - VS2015 x86 Debug
+	devenv .build/projects/vs2015/spaceinvaders.sln /Build "Debug|Win32"
+vs2015-release32: .build/projects/vs2015 ## Build - VS2015 x86 Release
+	devenv .build/projects/vs2015/spaceinvaders.sln /Build "Release|Win32"
+vs2015-debug64: .build/projects/vs2015 ## Build - VS2015 x64 Debug
+	devenv .build/projects/vs2015/spaceinvaders.sln /Build "Debug|x64"
+vs2015-release64: .build/projects/vs2015 ## Build - VS2015 x64 Release
+	devenv .build/projects/vs2015/spaceinvaders.sln /Build "Release|x64"
+vs2015: vs2015-debug32 vs2015-release32 vs2015-debug64 vs2015-release64 ## Build - VS2015 x86/x64 Debug and Release
+
+.build/projects/vs2017:
+	$(GENIE) --with-shared-lib vs2017
+vs2017-debug32: .build/projects/vs2017 ## Build - vs2017 x86 Debug
+	devenv .build/projects/vs2017/spaceinvaders.sln /Build "Debug|Win32"
+vs2017-release32: .build/projects/vs2017 ## Build - vs2017 x86 Release
+	devenv .build/projects/vs2017/spaceinvaders.sln /Build "Release|Win32"
+vs2017-debug64: .build/projects/vs2017 ## Build - vs2017 x64 Debug
+	devenv .build/projects/vs2017/spaceinvaders.sln /Build "Debug|x64"
+vs2017-release64: .build/projects/vs2017 ## Build - vs2017 x64 Release
+	devenv .build/projects/vs2017/spaceinvaders.sln /Build "Release|x64"
+vs2017: vs2017-debug32 vs2017-release32 vs2017-debug64 vs2017-release64 ## Build - vs2017 x86/x64 Debug and Release
 
 .build/projects/gmake-osx:
 	$(GENIE) --with-shared-lib --gcc=osx gmake
