Fix travis build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 sudo: true
 language: cpp
 
+jobs:
+  fast_finish: true
+
 addons:
   apt:
     packages:
@@ -86,7 +89,8 @@ script:
   - cd CrossEngine
   - ${workspace}/external/bx/tools/bin/${OS_NAME}/genie --gcc=${GENIE_COMPILER} gmake
   - make -C build/projects/gmake-${BUILD_FILE} -j3 config=${BUILD_TYPE} all
-  - mkdir build
+  - cd ${workspace}
+  - mkdir -p build
   - cmake -DCMAKE_BUILD_TYPE:STRING=Release -H. -B./build -G Ninja
   - cmake --build ./build --config Release --target all -- -j3
   - cd build
